# android-dirtycowy-exploit

./: CMakeLists.txt  compile-gcc.sh
dirtycow-test/: dirtycow  writeme
sdrw/: compile-dirtycowy.py  dirtycowy.c  info.txt  platform.xml.backup  platform.xml.fixed  platform.xml.fixed2  platform.xml.fixed3  platform.xml.new  run-as.backup  run-as.c
src/: dirtycowy.c  run-as.c
